--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Friendly Chat</string>
-    <string name="sign_out">Sign Out</string>
-    <string name="send_button_label">Send</string>
+    <string name="sign_out">Dil</string>
+    <string name="send_button_label">Dergo</string>
 </resources>
